Fix background whitespace on horizontal orientation, add media queries

--- a/style.css
+++ b/style.css
@@ -18,11 +18,12 @@ body {
 
 #background {
     height: 100vh;
-    max-width: 100vw;
+    width: 100vw;
     object-fit: cover;
-    object-position: 80% 0;
     overflow: hidden;
     position: absolute;
+    left: 0;
+    bottom: 0;
     z-index: -1;
 }
 
@@ -283,9 +284,7 @@ ul {
     color: #242540;
 }
 
-@media only screen
-    and (min-device-width:600px)
-    and (orientation: landscape) {
+@media only screen and (min-device-width:600px) {
     
     #game {
         flex-direction: row;
@@ -318,5 +317,28 @@ ul {
     .skulls {
         margin: 1rem 0;
         display: inline-block;
+    }
+
+
+}
+
+@media only screen and (min-device-width:768px) {
+
+    .fig-box {
+        scale: 1.5;
+    }
+}
+
+@media only screen and (min-device-width:992px) {
+
+    .fig-box {
+        scale: 1.5;
+    }
+}
+
+@media only screen and (min-device-width:1200px) {
+
+    .fig-box {
+        scale: 1.8;
     }
 }
